--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: moovees
+name: pokeappjosaba
 description: "Aplicación para un catálogo de películas."
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -9,6 +9,7 @@ environment:
   sdk: '>=2.19.4 <4.0.0'
 
 dependencies:
+  http: ^1.1.0
   flutter:
     sdk: flutter
 
@@ -23,5 +24,3 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/filmhome.jpg
